--- a/index.html
+++ b/index.html
@@ -4,7 +4,102 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Mini Damas</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header-item"><h1>Mini Damas</h1></div>
+      <div class="header-item"><a href="">Damas</a></div>
+      <div class="header-item"><a href="">¿QUÉ ES?</a></div>
+    </header>
+    <main>
+      <table>
+        <tr id="row-8" class="row">
+          <td id="row-8-col-1" class="cell">XX</td>
+          <td id="row-8-col-2" class="cell">00</td>
+          <td id="row-8-col-3" class="cell">XX</td>
+          <td id="row-8-col-4" class="cell">00</td>
+          <td id="row-8-col-5" class="cell">XX</td>
+          <td id="row-8-col-6" class="cell">00</td>
+          <td id="row-8-col-7" class="cell">XX</td>
+          <td id="row-8-col-8" class="cell">00</td>
+        </tr>
+        <tr id="row-7" class="row">
+          <td id="row-7-col-1" class="cell">XX</td>
+          <td id="row-7-col-2" class="cell">00</td>
+          <td id="row-7-col-3" class="cell">XX</td>
+          <td id="row-7-col-4" class="cell">00</td>
+          <td id="row-7-col-5" class="cell">XX</td>
+          <td id="row-7-col-6" class="cell">00</td>
+          <td id="row-7-col-7" class="cell">XX</td>
+          <td id="row-7-col-8" class="cell">00</td>
+        </tr>
+        <tr id="row-6" class="row">
+          <td id="row-6-col-1" class="cell">XX</td>
+          <td id="row-6-col-2" class="cell">00</td>
+          <td id="row-6-col-3" class="cell">XX</td>
+          <td id="row-6-col-4" class="cell">00</td>
+          <td id="row-6-col-5" class="cell">XX</td>
+          <td id="row-6-col-6" class="cell">00</td>
+          <td id="row-6-col-7" class="cell">XX</td>
+          <td id="row-6-col-8" class="cell">00</td>
+        </tr>
+        <tr id="row-5" class="row">
+          <td id="row-5-col-1" class="cell">XX</td>
+          <td id="row-5-col-2" class="cell">00</td>
+          <td id="row-5-col-3" class="cell">XX</td>
+          <td id="row-5-col-4" class="cell">00</td>
+          <td id="row-5-col-5" class="cell">XX</td>
+          <td id="row-5-col-6" class="cell">00</td>
+          <td id="row-5-col-7" class="cell">00</td>
+          <td id="row-5-col-8" class="cell">XX</td>
+        </tr>
+        <tr id="row-4" class="row">
+          <td id="row-4-col-1" class="cell">XX</td>
+          <td id="row-4-col-2" class="cell">00</td>
+          <td id="row-4-col-3" class="cell">XX</td>
+          <td id="row-4-col-4" class="cell">00</td>
+          <td id="row-4-col-5" class="cell">XX</td>
+          <td id="row-4-col-6" class="cell">00</td>
+          <td id="row-4-col-7" class="cell">00</td>
+          <td id="row-4-col-8" class="cell">XX</td>
+        </tr>
+        <tr id="row-3" class="row">
+          <td id="row-3-col-1" class="cell">XX</td>
+          <td id="row-3-col-2" class="cell">00</td>
+          <td id="row-3-col-3" class="cell">XX</td>
+          <td id="row-3-col-4" class="cell">00</td>
+          <td id="row-3-col-5" class="cell">XX</td>
+          <td id="row-3-col-6" class="cell">00</td>
+          <td id="row-3-col-7" class="cell">00</td>
+          <td id="row-3-col-8" class="cell">XX</td>
+        </tr>
+        <tr id="row-2" class="row">
+          <td id="row-2-col-1" class="cell">XX</td>
+          <td id="row-2-col-2" class="cell">00</td>
+          <td id="row-2-col-3" class="cell">XX</td>
+          <td id="row-2-col-4" class="cell">00</td>
+          <td id="row-2-col-5" class="cell">XX</td>
+          <td id="row-2-col-6" class="cell">00</td>
+          <td id="row-2-col-7" class="cell">00</td>
+          <td id="row-2-col-8" class="cell">XX</td>
+        </tr>
+        <tr id="row-1" class="row">
+          <td id="row-1-col-1" class="cell">XX</td>
+          <td id="row-1-col-2" class="cell">00</td>
+          <td id="row-1-col-3" class="cell">XX</td>
+          <td id="row-1-col-4" class="cell">00</td>
+          <td id="row-1-col-5" class="cell">XX</td>
+          <td id="row-1-col-6" class="cell">00</td>
+          <td id="row-1-col-7" class="cell">00</td>
+          <td id="row-1-col-8" class="cell">XX</td>
+        </tr>
+      </table>
+    </main>
+    <div id="div-inicio-partida">
+      <button>Nueva Partida</button>
+    </div>
+  </body>
 </html>
