pieces and more css added

--- a/index.html
+++ b/index.html
@@ -17,89 +17,137 @@
     <main>
       <table>
         <tr id="row-8" class="row">
-          <td id="row-8-col-1" class="cell">XX</td>
-          <td id="row-8-col-2" class="cell">00</td>
-          <td id="row-8-col-3" class="cell">XX</td>
-          <td id="row-8-col-4" class="cell">00</td>
-          <td id="row-8-col-5" class="cell">XX</td>
-          <td id="row-8-col-6" class="cell">00</td>
-          <td id="row-8-col-7" class="cell">XX</td>
-          <td id="row-8-col-8" class="cell">00</td>
+          <td id="row-8-col-1" class="cell light"></td>
+          <td id="row-8-col-2" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-8-col-3" class="cell light"></td>
+          <td id="row-8-col-4" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-8-col-5" class="cell light"></td>
+          <td id="row-8-col-6" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-8-col-7" class="cell light"></td>
+          <td id="row-8-col-8" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
         </tr>
         <tr id="row-7" class="row">
-          <td id="row-7-col-1" class="cell">XX</td>
-          <td id="row-7-col-2" class="cell">00</td>
-          <td id="row-7-col-3" class="cell">XX</td>
-          <td id="row-7-col-4" class="cell">00</td>
-          <td id="row-7-col-5" class="cell">XX</td>
-          <td id="row-7-col-6" class="cell">00</td>
-          <td id="row-7-col-7" class="cell">XX</td>
-          <td id="row-7-col-8" class="cell">00</td>
+          <td id="row-7-col-1" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-7-col-2" class="cell light"></td>
+          <td id="row-7-col-3" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-7-col-4" class="cell light"></td>
+          <td id="row-7-col-5" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-7-col-6" class="cell light"></td>
+          <td id="row-7-col-7" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-7-col-8" class="cell light"></td>
         </tr>
         <tr id="row-6" class="row">
-          <td id="row-6-col-1" class="cell">XX</td>
-          <td id="row-6-col-2" class="cell">00</td>
-          <td id="row-6-col-3" class="cell">XX</td>
-          <td id="row-6-col-4" class="cell">00</td>
-          <td id="row-6-col-5" class="cell">XX</td>
-          <td id="row-6-col-6" class="cell">00</td>
-          <td id="row-6-col-7" class="cell">XX</td>
-          <td id="row-6-col-8" class="cell">00</td>
+          <td id="row-6-col-1" class="cell light"></td>
+          <td id="row-6-col-2" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-6-col-3" class="cell light"></td>
+          <td id="row-6-col-4" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-6-col-5" class="cell light"></td>
+          <td id="row-6-col-6" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
+          <td id="row-6-col-7" class="cell light"></td>
+          <td id="row-6-col-8" class="cell dark">
+            <div class="piece-team-dark"></div>
+          </td>
         </tr>
         <tr id="row-5" class="row">
-          <td id="row-5-col-1" class="cell">XX</td>
-          <td id="row-5-col-2" class="cell">00</td>
-          <td id="row-5-col-3" class="cell">XX</td>
-          <td id="row-5-col-4" class="cell">00</td>
-          <td id="row-5-col-5" class="cell">XX</td>
-          <td id="row-5-col-6" class="cell">00</td>
-          <td id="row-5-col-7" class="cell">00</td>
-          <td id="row-5-col-8" class="cell">XX</td>
+          <td id="row-5-col-1" class="cell dark"></td>
+          <td id="row-5-col-2" class="cell light"></td>
+          <td id="row-5-col-3" class="cell dark"></td>
+          <td id="row-5-col-4" class="cell light"></td>
+          <td id="row-5-col-5" class="cell dark"></td>
+          <td id="row-5-col-6" class="cell light"></td>
+          <td id="row-5-col-7" class="cell dark"></td>
+          <td id="row-5-col-8" class="cell light"></td>
         </tr>
         <tr id="row-4" class="row">
-          <td id="row-4-col-1" class="cell">XX</td>
-          <td id="row-4-col-2" class="cell">00</td>
-          <td id="row-4-col-3" class="cell">XX</td>
-          <td id="row-4-col-4" class="cell">00</td>
-          <td id="row-4-col-5" class="cell">XX</td>
-          <td id="row-4-col-6" class="cell">00</td>
-          <td id="row-4-col-7" class="cell">00</td>
-          <td id="row-4-col-8" class="cell">XX</td>
+          <td id="row-4-col-1" class="cell light"></td>
+          <td id="row-4-col-2" class="cell dark"></td>
+          <td id="row-4-col-3" class="cell light"></td>
+          <td id="row-4-col-4" class="cell dark"></td>
+          <td id="row-4-col-5" class="cell light"></td>
+          <td id="row-4-col-6" class="cell dark"></td>
+          <td id="row-4-col-7" class="cell light"></td>
+          <td id="row-4-col-8" class="cell dark"></td>
         </tr>
         <tr id="row-3" class="row">
-          <td id="row-3-col-1" class="cell">XX</td>
-          <td id="row-3-col-2" class="cell">00</td>
-          <td id="row-3-col-3" class="cell">XX</td>
-          <td id="row-3-col-4" class="cell">00</td>
-          <td id="row-3-col-5" class="cell">XX</td>
-          <td id="row-3-col-6" class="cell">00</td>
-          <td id="row-3-col-7" class="cell">00</td>
-          <td id="row-3-col-8" class="cell">XX</td>
+          <td id="row-3-col-1" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-3-col-2" class="cell light"></td>
+          <td id="row-3-col-3" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-3-col-4" class="cell light"></td>
+          <td id="row-3-col-5" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-3-col-6" class="cell light"></td>
+          <td id="row-3-col-7" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-3-col-8" class="cell light"></td>
         </tr>
         <tr id="row-2" class="row">
-          <td id="row-2-col-1" class="cell">XX</td>
-          <td id="row-2-col-2" class="cell">00</td>
-          <td id="row-2-col-3" class="cell">XX</td>
-          <td id="row-2-col-4" class="cell">00</td>
-          <td id="row-2-col-5" class="cell">XX</td>
-          <td id="row-2-col-6" class="cell">00</td>
-          <td id="row-2-col-7" class="cell">00</td>
-          <td id="row-2-col-8" class="cell">XX</td>
+          <td id="row-2-col-1" class="cell light"></td>
+          <td id="row-2-col-2" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-2-col-3" class="cell light"></td>
+          <td id="row-2-col-4" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-2-col-5" class="cell light"></td>
+          <td id="row-2-col-6" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-2-col-7" class="cell light"></td>
+          <td id="row-2-col-8" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
         </tr>
         <tr id="row-1" class="row">
-          <td id="row-1-col-1" class="cell">XX</td>
-          <td id="row-1-col-2" class="cell">00</td>
-          <td id="row-1-col-3" class="cell">XX</td>
-          <td id="row-1-col-4" class="cell">00</td>
-          <td id="row-1-col-5" class="cell">XX</td>
-          <td id="row-1-col-6" class="cell">00</td>
-          <td id="row-1-col-7" class="cell">00</td>
-          <td id="row-1-col-8" class="cell">XX</td>
+          <td id="row-1-col-1" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-1-col-2" class="cell light"></td>
+          <td id="row-1-col-3" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-1-col-4" class="cell light"></td>
+          <td id="row-1-col-5" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-1-col-6" class="cell light"></td>
+          <td id="row-1-col-7" class="cell dark">
+            <div class="piece-team-light"></div>
+          </td>
+          <td id="row-1-col-8" class="cell light"></td>
         </tr>
       </table>
     </main>
-    <div id="div-inicio-partida">
-      <button>Nueva Partida</button>
+    <div id="div-start-match">
+      <button id="start-match">Nueva Partida</button>
     </div>
   </body>
 </html>
