pieces changed and minor details added

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <!--tendrá que ser un nav??-->
       <ul id="navigation-items">
         <li id="title" class="header-item">Mini Damas</li>
-        <li class="header-item"><a href="">DAMAS</a></li>
-        <li class="header-item"><a href="">¿QUÉ ES?</a></li>
+        <li><a class="header-item" href="">DAMAS</a></li>
+        <li><a class="header-item" href="">¿QUÉ ES?</a></li>
       </ul>
     </header>
     <div id="where-am-i">
-      <div><a href="">Mini damas</a></div>
+      <div><a href="">Mini Damas</a></div>
       <div>/</div>
       <div>Portada</div>
     </div>
@@ -27,55 +27,55 @@
         <tr id="row-8" class="row">
           <td id="row-8-col-1" class="cell light"></td>
           <td id="row-8-col-2" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-8-col-3" class="cell light"></td>
           <td id="row-8-col-4" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-8-col-5" class="cell light"></td>
           <td id="row-8-col-6" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-8-col-7" class="cell light"></td>
           <td id="row-8-col-8" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
         </tr>
         <tr id="row-7" class="row">
           <td id="row-7-col-1" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-7-col-2" class="cell light"></td>
           <td id="row-7-col-3" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-7-col-4" class="cell light"></td>
           <td id="row-7-col-5" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-7-col-6" class="cell light"></td>
           <td id="row-7-col-7" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-7-col-8" class="cell light"></td>
         </tr>
         <tr id="row-6" class="row">
           <td id="row-6-col-1" class="cell light"></td>
           <td id="row-6-col-2" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-6-col-3" class="cell light"></td>
           <td id="row-6-col-4" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-6-col-5" class="cell light"></td>
           <td id="row-6-col-6" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
           <td id="row-6-col-7" class="cell light"></td>
           <td id="row-6-col-8" class="cell dark">
-            <div class="piece-team-dark"></div>
+            <img src="./img/greypiece.png" alt="Grey piece" />
           </td>
         </tr>
         <tr id="row-5" class="row">
@@ -100,77 +100,77 @@
         </tr>
         <tr id="row-3" class="row">
           <td id="row-3-col-1" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-3-col-2" class="cell light"></td>
           <td id="row-3-col-3" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-3-col-4" class="cell light"></td>
           <td id="row-3-col-5" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-3-col-6" class="cell light"></td>
           <td id="row-3-col-7" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-3-col-8" class="cell light"></td>
         </tr>
         <tr id="row-2" class="row">
           <td id="row-2-col-1" class="cell light"></td>
           <td id="row-2-col-2" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-2-col-3" class="cell light"></td>
           <td id="row-2-col-4" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-2-col-5" class="cell light"></td>
           <td id="row-2-col-6" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-2-col-7" class="cell light"></td>
           <td id="row-2-col-8" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
         </tr>
         <tr id="row-1" class="row">
           <td id="row-1-col-1" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-1-col-2" class="cell light"></td>
           <td id="row-1-col-3" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-1-col-4" class="cell light"></td>
           <td id="row-1-col-5" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-1-col-6" class="cell light"></td>
           <td id="row-1-col-7" class="cell dark">
-            <div class="piece-team-light"></div>
+            <img src="./img/redpiece.png" alt="Red piece" />
           </td>
           <td id="row-1-col-8" class="cell light"></td>
         </tr>
       </table>
       <div id="div-start-match">
-        <button id="start-match">Nueva Partida</button>
+        <button id="start-match-button">Nueva partida</button>
       </div>
     </main>
     <div id="damas-explanation">
-      <p>
+      <p class="explanation">
         Las <span style="font-weight: bold">damas</span> es un juego de mesa
         para dos personas en un tablero de 64 cuadros. El juego consiste en
         mover las fichas en diagonal sobre los cuadros negros con el objetivo de
         comer las piezas del contrario saltando sobre ellas.
       </p>
-      <p>
+      <p class="explanation">
         Cada jugador dispone de 12 fichas de un mismo color situadas en las
         casillas negras más próximas a éste. El objetivo del juego es capturar
         las fichas del oponente o acorralarlas para que no puedan realizar
         movimientos.
       </p>
-      <p>
+      <p class="explanation">
         Si no conoces las reglas, sigue leyendo cómo se juega en
         <a href="">Reglas de las damas.</a>
       </p>
